[package]
name = "c_wrapper"
version = "0.1.0"
authors = ["Dan Cojocaru <dan.cojocaru00@e-uvt.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
errno = "0.2.7"
serde = { version = "1.0.118", features = [ "derive" ] }
